[gd_scene load_steps=25 format=3 uid="uid://b3ryuo6pcwqg"]

[ext_resource type="Script" path="res://SceneHandler.gd" id="1_8elvo"]
[ext_resource type="Texture2D" uid="uid://clr48jbjbm5yy" path="res://Cog Generator Icon.svg" id="1_kc3dq"]
[ext_resource type="PackedScene" uid="uid://c8f8fqr7dutyf" path="res://tooth.tscn" id="2_37aft"]
[ext_resource type="Texture2D" uid="uid://cplr3jg2jmd6y" path="res://Quit icon.png" id="2_64ltx"]
[ext_resource type="Script" path="res://UI.gd" id="2_bmckq"]
[ext_resource type="Texture2D" uid="uid://cjvm3xp0oh84r" path="res://Screenshot Icon.png" id="3_4bkws"]
[ext_resource type="PackedScene" uid="uid://dvtmxoy1trki1" path="res://Cog.tscn" id="5_o2ms6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4fwnu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xgapo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cxvfy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1wnc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sahri"]

[sub_resource type="InputEventAction" id="InputEventAction_2f32h"]
action = &"Quit"

[sub_resource type="Shortcut" id="Shortcut_g1ojr"]
events = [SubResource("InputEventAction_2f32h")]

[sub_resource type="InputEventAction" id="InputEventAction_4xyg3"]
action = &"Menu"

[sub_resource type="Shortcut" id="Shortcut_t1x0y"]
events = [SubResource("InputEventAction_4xyg3")]

[sub_resource type="InputEventAction" id="InputEventAction_exmvv"]
action = &"Screenshot"

[sub_resource type="Shortcut" id="Shortcut_b1axh"]
events = [SubResource("InputEventAction_exmvv")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8otnr"]
bg_color = Color(0.238281, 0.238281, 0.238281, 1)
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.554688, 0.597656, 0.605469, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdyh1"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.341176, 0.380392, 0.384314, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wxqe"]
bg_color = Color(0.238281, 0.238281, 0.238281, 1)
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.423529, 0.462745, 0.470588, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jrhmo"]

[sub_resource type="InputEventAction" id="InputEventAction_mp8b6"]
action = &"CogColour"

[sub_resource type="Shortcut" id="Shortcut_tprc5"]
events = [SubResource("InputEventAction_mp8b6")]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8elvo")
cogColour = Color(0.454902, 0.470588, 0.721569, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("2_bmckq")
metadata/_edit_use_anchors_ = true

[node name="QuitBut" type="Button" parent="CanvasLayer/UI"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "Quit (current layout will be lost)"
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.996094, 0.996094, 0.996094, 1)
theme_override_colors/icon_hover_color = Color(0.694118, 0.694118, 0.694118, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0.231373, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(0.262745, 0.262745, 0.262745, 1)
theme_override_constants/icon_max_width = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_4fwnu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xgapo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cxvfy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t1wnc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sahri")
shortcut = SubResource("Shortcut_g1ojr")
icon = ExtResource("2_64ltx")
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 2
mouse_filter = 2

[node name="MenuBut" type="Button" parent="CanvasLayer/UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Toggle Menu"
theme_override_colors/icon_normal_color = Color(0.839216, 0.831373, 0.835294, 1)
theme_override_colors/icon_pressed_color = Color(0.419608, 0.419608, 0.419608, 1)
theme_override_colors/icon_hover_color = Color(0.694118, 0.694118, 0.694118, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0.231373, 1)
theme_override_colors/icon_focus_color = Color(0.839216, 0.831373, 0.835294, 1)
theme_override_colors/icon_disabled_color = Color(0.262745, 0.262745, 0.262745, 1)
theme_override_constants/icon_max_width = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_4fwnu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xgapo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cxvfy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t1wnc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sahri")
toggle_mode = true
shortcut = SubResource("Shortcut_t1x0y")
icon = ExtResource("1_kc3dq")
flat = true

[node name="ScreenshotBut" type="Button" parent="CanvasLayer/UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Save screenshot to %Appdata%\\Godot\\app_userdata\\Cog Generator"
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.996094, 0.996094, 0.996094, 1)
theme_override_colors/icon_hover_color = Color(0.694118, 0.694118, 0.694118, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0.231373, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(0.262745, 0.262745, 0.262745, 1)
theme_override_constants/icon_max_width = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_4fwnu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xgapo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cxvfy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t1wnc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sahri")
shortcut = SubResource("Shortcut_b1axh")
icon = ExtResource("3_4bkws")
flat = true

[node name="BGPickerButton" type="ColorPickerButton" parent="CanvasLayer/UI/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Background Colour"
theme_override_styles/normal = SubResource("StyleBoxFlat_8otnr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tdyh1")
theme_override_styles/hover = SubResource("StyleBoxFlat_4wxqe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jrhmo")
shortcut = SubResource("Shortcut_tprc5")

[node name="CogPickerButton" type="ColorPickerButton" parent="CanvasLayer/UI/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Cog Colour"
theme_override_styles/normal = SubResource("StyleBoxFlat_8otnr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tdyh1")
theme_override_styles/hover = SubResource("StyleBoxFlat_4wxqe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jrhmo")
shortcut = SubResource("Shortcut_tprc5")

[node name="Cog" parent="." instance=ExtResource("5_o2ms6")]
visible = false

[node name="Tooth" parent="Cog" instance=ExtResource("2_37aft")]
visible = false

[connection signal="pressed" from="CanvasLayer/UI/QuitBut" to="." method="_on_quit_but_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/HBoxContainer/ScreenshotBut" to="." method="_on_screenshot_but_pressed"]
[connection signal="color_changed" from="CanvasLayer/UI/HBoxContainer/BGPickerButton" to="." method="_on_bg_picker_button_color_changed"]
[connection signal="color_changed" from="CanvasLayer/UI/HBoxContainer/CogPickerButton" to="." method="_on_cog_picker_button_color_changed"]
